--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 
 <nav>
     <a href="#about">학교 홈페이지</a>
-    <a href="#전문과정">전문과정</a>
-    <a href="#인재과정">인재과정</a>
+    <a href="#전문과정">전문과정.html</a>
+    <a href="#인재과정">인재과정.html</a>
 </nav>
 
 <div class="container">
